# wasmflow

./: Cargo.toml  README.md  bindings.rs
.devcontainer/: Dockerfile  devcontainer.json
crates/wasm-record-printer/: Cargo.toml
crates/wasm-record-printer/src/: lib.rs
crates/wasm-record-processor/: Cargo.toml  bindings.rs  record-processor.wit
crates/wasm-record-processor/src/: lib.rs
crates/wasm-s3-sink/: Cargo.toml
crates/wasm-s3-sink/src/: lib.rs
src/: flow.rs  kafka.rs  lib.rs  main.rs
src/conf/: mod.rs  wasmflow.yml
src/sinks/: s3.rs
src/sources/: kafka.rs
wit/: bindings-record-processor-rust-wasm-export.rs  bindings-record-processor-wasmtime-import.rs  bindings-s3-sink-rust-wasm-import.rs  bindings-s3-sink-wasmtime-export.rs  gen-bindings.sh  record-processor.wit  s3-sink.wit
