[package]
name = "wasmflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
rskafka = { git = "https://github.com/ramrengaswamy/rskafka.git", rev = "655914866318cf2685998a2ccaf54737b74c54e5", features = [
    "full",
] }
webpki-roots = "0.22.0"
rustls = "0.20.4"
tracing = "0.1"
console-subscriber = "0.1.5"
anyhow = "1"
wasmtime = "0.35.0"
wasmtime-wasi = "0.35.0"
wasi-common = "0.35.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "51af112a0b1bcd9132db3bd640ca37ea3fc2edaf", features = [
    "async",
] }
aws-sdk-s3 = "0.11.0"
aws-config = "0.11.0"
aws-types = "0.11.0"
bytes = "1.1.0"
async-trait = "0.1.53"
serde = "1.0"
serde_yaml = "0.8"
educe = "0.4.19"
futures = "0.3.21"
chrono = "0.4.19"
uuid = { version = "1.0.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[workspace]
members = ["crates/wasm-record-printer", "crates/wasm-s3-sink"]
