[package]
name = "wasmflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
rdkafka = { version = "0.28.0", features = [
    "cmake-build",
    "ssl-vendored",
    "gssapi-vendored",
] }
webpki-roots = "0.22.0"
rustls = "0.20.4"
tracing = "0.1"
console-subscriber = "0.1.5"
anyhow = "1"
wasmtime = "0.38.0"
wasmtime-wasi = "0.38.0"
wasi-common = "0.38.0"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea", features = [
    "async",
] }
aws-sdk-s3 = "0.16.0"
aws-config = "0.46.0"
aws-types = "0.46.0"
bytes = "1.1.0"
async-trait = "0.1.53"
serde = "1.0"
serde_yaml = "0.9.1"
educe = "0.4.19"
futures = "0.3.21"
chrono = "0.4.19"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
backoff = { version = "0.4.0", features = ["tokio"] }
opentelemetry = { version = "0.17.0", features = [
    "metrics",
    "serialize",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.10.0", features = ["metrics"] }

[workspace]
members = ["crates/wasm-record-printer", "crates/wasm-s3-sink"]
