[package]
name = "wasm-record-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "8080af243cda15447cb5ead8001cbf0098e12540" }
integer-encoding = "3.0.3"
