[package]
name = "wasm-s3-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ['cdylib']

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "005a9e6d5befe4652c0e6e05578b245ab96b3cea" }
